--- a/src/Layouts/MainLayout/mainLayout.module.css
+++ b/src/Layouts/MainLayout/mainLayout.module.css
@@ -1,3 +1,9 @@
+.modalWindow {
+    position: absolute;
+    top: 70px;
+    right: 50px;
+}
+
 .wrapper {
     display: flex;
     flex-wrap: nowrap;
@@ -19,6 +25,7 @@
     width: 100%;
     position: fixed;
     z-index: 3;
+    top: 0;
 }
 
 .menu a {
@@ -53,4 +60,71 @@
     width: 100vw;
     z-index: 2;
     color: gold;
+}
+
+.modalWindowButton {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.modalWindowButton:before {
+    content: "";
+    background: linear-gradient(
+            45deg,
+            #ff0000,
+            #ff7300,
+            #fffb00,
+            #48ff00,
+            #00ffd5,
+            #002bff,
+            #7a00ff,
+            #ff00c8,
+            #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-modalWindowButton {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.modalWindowButton:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
 }
