--- a/src/Components/ButtonDetail/buttonDetail.module.css
+++ b/src/Components/ButtonDetail/buttonDetail.module.css
@@ -5,7 +5,7 @@
     border-radius: 42px;
     border-width: 0;
     box-shadow: rgba(57, 31, 91, 0.24) 0 2px 2px, rgba(179, 132, 201, 0.4) 0 8px 12px;
-    color: #FFFFFF;
+    color: #b9b122;
     cursor: pointer;
     display: flex;
     font-family: Quicksand, sans-serif;
