--- a/src/Pages/UserProfilePage/userProfilePage.module.css
+++ b/src/Pages/UserProfilePage/userProfilePage.module.css
@@ -13,6 +13,48 @@
     width: 37%;
 }
 
-.profileAvatar img{
+.profileAvatar img {
     width: 50%;
+}
+
+.profileFormUpdate {
+    position: absolute;
+    left: 20vw;
+    width: 60vw;
+    height:  60vh;
+    background: linear-gradient(135deg, rgb(181, 189, 200) 0%, rgba(130, 140, 149, 0.98) 36%, rgba(40, 52, 59, 0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+.formButtonWrapper{
+    display: flex;
+    flex-wrap: nowrap;
+    width: 95%;
+    justify-content: center;
+    gap: 20px;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 5px;
+}
+.formButtonWrapper button {
+    background-color: #c2fbd7;
+    border-radius: 100px;
+    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
+    color: green;
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.formButtonWrapper button:hover {
+    box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
+    transform: scale(1.05) rotate(-1deg);
 }
