--- a/src/Pages/UsersListPage/userListPage.module.css
+++ b/src/Pages/UsersListPage/userListPage.module.css
@@ -1,13 +1,18 @@
 .userListWrapper{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-around;
 }
 .userListTitle{
+
     width: 100%;
 }
 .userList{
-    width: 40%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px
+    /*width: 23%;*/
 }
 .currentUserWrapper{
     width: 55%;
