FE #7-8 - edit : 1. changes have been made to the pagination functionality, 2. added functionality to select the number of elements on the page 3. changes were made to the profile update functionality to correctly display user information

--- a/src/Pages/UsersListPage/userListPage.module.css
+++ b/src/Pages/UsersListPage/userListPage.module.css
@@ -12,8 +12,13 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px
-    /*width: 23%;*/
 }
 .currentUserWrapper{
     width: 55%;
+}
+.paginationSelectedButton{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
 }
