--- a/src/Components/UniversalModalWindow/universalModalWindow.module.css
+++ b/src/Components/UniversalModalWindow/universalModalWindow.module.css
@@ -8,11 +8,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 
 .modal_content {
     background-color: #fff;
     padding: 20px;
+    width: 40%;
 }
 
 .modal_close {
