--- a/src/Pages/MyListCompanyPage/myListCompanyPage.module.css
+++ b/src/Pages/MyListCompanyPage/myListCompanyPage.module.css
@@ -1,8 +1,9 @@
-.companyListWrapper{
+.myCompanyListWrapper{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-around;
+    height: 100%;
 }
 .companyListTitle{
 
