--- a/src/Components/CompanyList/companyList.module.css
+++ b/src/Components/CompanyList/companyList.module.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-around;
+    height: 100%;
 }
 .companyListTitle{
 
@@ -11,7 +12,8 @@
 .companyList{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px
+    gap: 20px;
+    height: 400px;
 }
 .currentCompanyWrapper{
     width: 55%;
