--- a/src/Components/CompanyList/companyList.module.css
+++ b/src/Components/CompanyList/companyList.module.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    height: 400px;
+    /*height: 400px;*/
 }
 .currentCompanyWrapper{
     width: 55%;
