--- a/src/Components/Member/member.module.css
+++ b/src/Components/Member/member.module.css
@@ -1,15 +1,15 @@
-.companyWrapper {
-    width: 18%;
+.userWrapper {
+    width: 45%;
+    display: flex;
+    flex-wrap: nowrap;
 
-}
-.buttonWrapper{
 }
 .snip1336 {
     font-family: 'Roboto', Arial, sans-serif;
     position: relative;
     overflow: hidden;
     margin: 10px;
-    width: 100%;
+    width: 50%;
     color: #ffffff;
     text-align: left;
     line-height: 1.4em;
@@ -40,24 +40,6 @@
     border-style: solid;
     border-width: 55px 0 0 400px;
     border-color: transparent transparent transparent #141414;
-}
-.snip1336 figcaption a {
-    padding: 5px;
-    border: 1px solid #ffffff;
-    color: #ffffff;
-    font-size: 10px;
-    text-transform: uppercase;
-    margin: 10px 0;
-    display: inline-block;
-    opacity: 0.65;
-    width: 47%;
-    text-align: center;
-    text-decoration: none;
-    /*font-weight: 600;*/
-    letter-spacing: 1px;
-}
-.snip1336 figcaption a:hover {
-    opacity: 1;
 }
 .snip1336 .profile {
     border-radius: 50%;
