--- a/src/Components/Invite/invite.module.css
+++ b/src/Components/Invite/invite.module.css
@@ -1,7 +1,132 @@
-.inviteItem{
-    border: 2px solid #356e14;
+.inviteWrapper{
+    display: flex;
+    flex-direction: column;
+    width: 18%;
+}
+.nft {
+    user-select: none;
+    width: 100%;
+    border: 1px solid #ffffff22;
+    background-color: #282c34;
+    background: linear-gradient(0deg, #282c34 0%, rgba(17, 0, 32, 0.5) 100%);
+    box-shadow: 0 7px 20px 5px #00000088;
+    border-radius: 0.7rem;
+    backdrop-filter: blur(7px);
+    overflow: hidden;
+    transition: 0.5s all;
+}
+
+.nft hr {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #88888855;
+    margin-top: 0;
+}
+
+.main h3 {
+    margin: 5px;
+    font-size: 14px;
+}
+
+.nft .main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     box-sizing: border-box;
-    padding: 5px;
-    background-color: azure;
-    border-radius: 15px;
+    padding: 1rem;
+}
+
+.nft .main .tokenImage {
+    border-radius: 0.5rem;
+    max-width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.nft .main .tokenInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.role {
+    display: flex;
+    align-items: center;
+    color: #ee83e5;
+    font-weight: 700;
+}
+
+.nft .main .creator {
+    display: flex;
+    align-items: center;
+    margin-top: 0.2rem;
+    margin-bottom: -0.3rem;
+}
+
+.nft .main .creator ins {
+    color: #a89ec9;
+    text-decoration: none;
+}
+
+.nft .main .creator .wrapper {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ffffff22;
+    padding: 0.3rem;
+    margin: 0;
+    margin-right: 0.5rem;
+    border-radius: 100%;
+    box-shadow: inset 0 0 0 4px #000000aa;
+}
+
+.nft .main .creator .wrapper img {
+    border-radius: 100%;
+    border: 1px solid #ffffff22;
+    width: 2rem;
+    height: 2rem;
+    object-fit: cover;
+    margin: 0;
+}
+
+.nft ::before {
+    position: absolute;
+    content: "";
+    box-shadow: 0 0 100px 40px #ffffff08;
+    top: -10%;
+    left: -100%;
+    transform: rotate(-45deg);
+    height: 60rem;
+    transition: 0.7s all;
+}
+
+.nft:hover {
+    border: 1px solid #ffffff44;
+    box-shadow: 0 7px 50px 10px #000000aa;
+    transform: scale(1.015);
+    filter: brightness(1.3);
+}
+
+.nft:hover ::before {
+    filter: brightness(0.5);
+    top: -100%;
+    left: 200%;
+}
+
+.tokenInfoButton {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 5px 0;
+
+}
+
+.tokenInfoButton button {
+    box-sizing: border-box;
+    padding: 4px 7px;
+    border-radius: 10px;
+    color: #ee2207;
+    font-size: 14px;
+    font-weight: 400;
+    max-width: 47%;
+    background: linear-gradient(to bottom, #d8e0de 0%, #aebfbc 22%, #99afab 33%, #8ea6a2 50%, #829d98 67%, #4e5c5a 82%, #0e0e0e 100%);
 }
