--- a/src/Components/UserProfile/userProfile.module.css
+++ b/src/Components/UserProfile/userProfile.module.css
@@ -1,6 +1,7 @@
 .profileDescription {
     width: 60%;
 }
+
 .profileAvatar {
     width: 37%;
 }
@@ -9,43 +10,33 @@
     width: 50%;
 }
 
-.userOptionsButton{
+.userOptionsButton {
     display: flex;
     flex-wrap: nowrap;
     gap: 10px;
     justify-content: space-around;
-}
-
-.formButtonWrapper, .userOptionsButton{
-    display: flex;
-    flex-wrap: nowrap;
-    width: 95%;
-    justify-content: center;
-    gap: 10px;
+    width: 100%;
     box-sizing: border-box;
-    padding: 5px;
-    margin: 5px;
-}
-.formButtonWrapper button, .userOptionsButton button {
-    background-color: #c2fbd7;
-    border-radius: 100px;
-    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
-    color: green;
-    cursor: pointer;
-    display: inline-block;
-    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
-    padding: 7px ;
-    text-align: center;
-    text-decoration: none;
-    transition: all 250ms;
-    border: 0;
-    font-size: 16px;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+
+    margin: 10px;
 }
 
-.formButtonWrapper button:hover, .userOptionsButton button:hover {
-    box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
-    transform: scale(1.05) rotate(-1deg);
+.userButtonAction {
+    color: #fff;
+    background-color: #38D2D2;
+    background-image: radial-gradient(93% 87% at 87% 89%, rgba(0, 0, 0, 0.23) 0%, transparent 86.18%), radial-gradient(66% 66% at 26% 20%, rgba(255, 255, 255, 0.55) 0%, rgba(255, 255, 255, 0) 69.79%, rgba(255, 255, 255, 0) 100%);
+    box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0 3px 9px rgba(255, 255, 255, 0.3), inset 0 1px 1px rgba(255, 255, 255, 0.6), inset 0 -8px 36px rgba(0, 0, 0, 0.3), inset 0 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2);
+    border-radius: 14px;
+    font-weight: bold;
+    font-size: 14px;
+    width: 18%;
+    border: 0;
+
+    box-sizing: border-box;
+    padding: 5px 10px;
+
+
+    user-select: none;
+    touch-action: manipulation;
+    cursor: pointer;
 }
