FE #12 - Add Quizzes  FE #13 - Quize workflow  add (  -addAnswer,  -addQuestion  -delQuiz  -delAnswer  -delQuestion  )  -refactor quizDetail  -refactor quizForm

--- a/src/Components/QuizDetail/quizDetail.module.css
+++ b/src/Components/QuizDetail/quizDetail.module.css
@@ -15,10 +15,6 @@
     flex-wrap: wrap;
 }
 
-.quizQuestion {
-    width: 15%;
-}
-
 .buttonSubmitWrapper {
     width: 100%;
     box-sizing: border-box;
@@ -38,12 +34,6 @@
     background: linear-gradient(to bottom, #596a72 100%, #cedce7 0%);
     color: snow;
 
-}
-
-.choseInputWrapper {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
 }
 
 .quizWrapper {
@@ -66,11 +56,12 @@
 }
 
 .quizWrapper ol {
-    margin: 0 0 10px 20px;
+    width: 19%;
+    margin: 0 0 10px 5px;
 }
 
 .quizWrapper ol li {
-    margin: 0 0 20px 0;
+    margin: 0 0 5px 0;
     list-style-type: none;
 }
 
@@ -88,33 +79,24 @@
     font: 44px Georgia, Serif;
 }
 
-.editQuizItem, .editQuizItemQuestion {
+.editQuizItem {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    /*gap: 10px;*/
     justify-content: center;
     align-content: center;
     align-items: center;
 }
 
-.editQuizItem i, .editQuizItemQuestion i {
+.editQuizItem i {
     font-size: 14px;
     cursor: pointer;
 }
 
-.editQuizItem h2, .editQuizItem h3, .editQuizItemQuestion h2, .editQuizItemQuestion h3 {
+.editQuizItem h2, .editQuizItem h3 {
     margin: 5px;
 }
 
-
-.editQuizItemQuestion {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 10px;
-    padding: 5px;
-}
 
 .quizTitleBlock {
     display: flex;
@@ -122,8 +104,15 @@
     justify-content: center;
     align-items: center;
 }
-ol>li>div{
+
+ol > li > div {
     background-color: silver;
+}
+
+ol, li {
+    box-sizing: border-box;
+    padding: 5px;
+    margin: 5px;
 }
 
 i .hidden {
@@ -132,4 +121,39 @@ i .hidden {
 
 .visible {
     display: block;
+}
+
+.ActionIcon {
+    display: flex;
+    gap: 10px;
+    box-sizing: border-box;
+    min-height: 22px;
+}
+
+.updateIcon {
+    color: green;
+    cursor: pointer;
+}
+
+.updateIcon:hover {
+
+    font-size: 18px;
+}
+
+.delIcon:hover {
+    font-size: 18px;
+}
+
+.delIcon {
+    color: red;
+    cursor: pointer;
+}
+
+.createQuestionButton {
+    display: flex;
+    justify-content: flex-end;
+    color: #32b341;
+    font-size: 32px;
+    box-sizing: border-box;
+    padding-right: 50px;
 }
